parser/build/generated-src/antlr/main/cps450/FloydParser.java
// Generated from cps450\Floyd.g4 by ANTLR 4.7.1
package cps450;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FloydParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, BOOLEAN=3, BEGIN=4, CLASS=5, ELSE=6, END=7, FALSE=8, FROM=9, 
		IF=10, INHERITS=11, INT=12, IS=13, LOOP=14, ME=15, NEW=16, NOT=17, NULL=18, 
		STRING=19, THEN=20, TRUE=21, WHILE=22, IDENTIFIER=23, INTEGER_LITERAL=24, 
		STRING_LITERAL=25, ILLIGAL_STRING_LITERAL=26, UNREQ_STRING_LITERAL=27, 
		AND=28, ADD=29, MINUS=30, MUL=31, DIV=32, GT=33, GTEQ=34, EQ=35, ASGOP=36, 
		LPAREN=37, RPAREN=38, LBRACK=39, RBRACK=40, COMMA=41, SEMICOL=42, COLON=43, 
		POINT=44, COMMENT=45, ENDOFLINE_1=46, ENDOFLINE_2=47, WS=48, UNREQ_CHAR=49;
	public static final int
		RULE_program = 0, RULE_start = 1, RULE_class_N = 2, RULE_var_decl = 3, 
		RULE_method_decl = 4, RULE_argument_decl_list = 5, RULE_argument_decl = 6, 
		RULE_type = 7, RULE_statement_list = 8, RULE_statement = 9, RULE_assignment_stmt = 10, 
		RULE_if_stmt = 11, RULE_loop_stmt = 12, RULE_call_stmt = 13, RULE_expression_list = 14, 
		RULE_expression = 15, RULE_binary_op = 16, RULE_unary_op = 17;
	public static final String[] ruleNames = {
		"program", "start", "class_N", "var_decl", "method_decl", "argument_decl_list", 
		"argument_decl", "type", "statement_list", "statement", "assignment_stmt", 
		"if_stmt", "loop_stmt", "call_stmt", "expression_list", "expression", 
		"binary_op", "unary_op"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'or'", "'and'", "'boolean'", "'begin'", "'class'", "'else'", "'end'", 
		"'false'", "'from'", "'if'", "'inherits'", "'int'", "'is'", "'loop'", 
		"'me'", "'new'", "'not'", "'null'", "'string'", "'then'", "'true'", "'while'", 
		null, null, null, null, null, "'&'", "'+'", "'-'", "'*'", "'/'", "'>'", 
		"'>='", "'='", "':='", "'('", "')'", "'['", "']'", "','", "';'", "':'", 
		"'.'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, "BOOLEAN", "BEGIN", "CLASS", "ELSE", "END", "FALSE", 
		"FROM", "IF", "INHERITS", "INT", "IS", "LOOP", "ME", "NEW", "NOT", "NULL", 
		"STRING", "THEN", "TRUE", "WHILE", "IDENTIFIER", "INTEGER_LITERAL", "STRING_LITERAL", 
		"ILLIGAL_STRING_LITERAL", "UNREQ_STRING_LITERAL", "AND", "ADD", "MINUS", 
		"MUL", "DIV", "GT", "GTEQ", "EQ", "ASGOP", "LPAREN", "RPAREN", "LBRACK", 
		"RBRACK", "COMMA", "SEMICOL", "COLON", "POINT", "COMMENT", "ENDOFLINE_1", 
		"ENDOFLINE_2", "WS", "UNREQ_CHAR"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Floyd.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FloydParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public StartContext start() {
			return getRuleContext(StartContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FloydListener ) ((FloydListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FloydListener ) ((FloydListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			start();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StartContext extends ParserRuleContext {
		public List<Class_NContext> class_N() {
			return getRuleContexts(Class_NContext.class);
		}
		public Class_NContext class_N(int i) {
			return getRuleContext(Class_NContext.class,i);
		}
		public List<TerminalNode> ENDOFLINE_1() { return getTokens(FloydParser.ENDOFLINE_1); }
		public TerminalNode ENDOFLINE_1(int i) {
			return getToken(FloydParser.ENDOFLINE_1, i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FloydListener ) ((FloydListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FloydListener ) ((FloydListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_start);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ENDOFLINE_1) {
				{
				{
				setState(38);
				match(ENDOFLINE_1);
				}
				}
				setState(43);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(44);
			class_N();
			setState(54);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(48);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==ENDOFLINE_1) {
						{
						{
						setState(45);
						match(ENDOFLINE_1);
						}
						}
						setState(50);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(51);
					class_N();
					}
					} 
				}
				setState(56);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ENDOFLINE_1) {
				{
				{
				setState(57);
				match(ENDOFLINE_1);
				}
				}
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_NContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(FloydParser.CLASS, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(FloydParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(FloydParser.IDENTIFIER, i);
		}
		public TerminalNode IS() { return getToken(FloydParser.IS, 0); }
		public TerminalNode END() { return getToken(FloydParser.END, 0); }
		public TerminalNode INHERITS() { return getToken(FloydParser.INHERITS, 0); }
		public TerminalNode FROM() { return getToken(FloydParser.FROM, 0); }
		public List<TerminalNode> ENDOFLINE_1() { return getTokens(FloydParser.ENDOFLINE_1); }
		public TerminalNode ENDOFLINE_1(int i) {
			return getToken(FloydParser.ENDOFLINE_1, i);
		}
		public List<Var_declContext> var_decl() {
			return getRuleContexts(Var_declContext.class);
		}
		public Var_declContext var_decl(int i) {
			return getRuleContext(Var_declContext.class,i);
		}
		public List<Method_declContext> method_decl() {
			return getRuleContexts(Method_declContext.class);
		}
		public Method_declContext method_decl(int i) {
			return getRuleContext(Method_declContext.class,i);
		}
		public Class_NContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_N; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FloydListener ) ((FloydListener)listener).enterClass_N(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FloydListener ) ((FloydListener)listener).exitClass_N(this);
		}
	}

	public final Class_NContext class_N() throws RecognitionException {
		Class_NContext _localctx = new Class_NContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_class_N);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(CLASS);
			setState(64);
			match(IDENTIFIER);
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INHERITS) {
				{
				setState(65);
				match(INHERITS);
				setState(66);
				match(FROM);
				setState(67);
				match(IDENTIFIER);
				}
			}

			setState(70);
			match(IS);
			setState(72); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(71);
				match(ENDOFLINE_1);
				}
				}
				setState(74); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ENDOFLINE_1 );
			setState(79);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(76);
					var_decl();
					}
					} 
				}
				setState(81);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENTIFIER) {
				{
				{
				setState(82);
				method_decl();
				}
				}
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(88);
			match(END);
			setState(89);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_declContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(FloydParser.IDENTIFIER, 0); }
		public TerminalNode COLON() { return getToken(FloydParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ASGOP() { return getToken(FloydParser.ASGOP, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<TerminalNode> ENDOFLINE_1() { return getTokens(FloydParser.ENDOFLINE_1); }
		public TerminalNode ENDOFLINE_1(int i) {
			return getToken(FloydParser.ENDOFLINE_1, i);
		}
		public Var_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FloydListener ) ((FloydListener)listener).enterVar_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FloydListener ) ((FloydListener)listener).exitVar_decl(this);
		}
	}

	public final Var_declContext var_decl() throws RecognitionException {
		Var_declContext _localctx = new Var_declContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_var_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(IDENTIFIER);
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(92);
				match(COLON);
				setState(93);
				type(0);
				}
			}

			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ASGOP) {
				{
				setState(96);
				match(ASGOP);
				setState(97);
				expression(0);
				}
			}

			setState(101); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(100);
				match(ENDOFLINE_1);
				}
				}
				setState(103); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ENDOFLINE_1 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Method_declContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(FloydParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(FloydParser.IDENTIFIER, i);
		}
		public TerminalNode LPAREN() { return getToken(FloydParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(FloydParser.RPAREN, 0); }
		public TerminalNode IS() { return getToken(FloydParser.IS, 0); }
		public TerminalNode BEGIN() { return getToken(FloydParser.BEGIN, 0); }
		public Statement_listContext statement_list() {
			return getRuleContext(Statement_listContext.class,0);
		}
		public TerminalNode END() { return getToken(FloydParser.END, 0); }
		public Argument_decl_listContext argument_decl_list() {
			return getRuleContext(Argument_decl_listContext.class,0);
		}
		public TerminalNode COLON() { return getToken(FloydParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<TerminalNode> ENDOFLINE_1() { return getTokens(FloydParser.ENDOFLINE_1); }
		public TerminalNode ENDOFLINE_1(int i) {
			return getToken(FloydParser.ENDOFLINE_1, i);
		}
		public List<Var_declContext> var_decl() {
			return getRuleContexts(Var_declContext.class);
		}
		public Var_declContext var_decl(int i) {
			return getRuleContext(Var_declContext.class,i);
		}
		public Method_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_method_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FloydListener ) ((FloydListener)listener).enterMethod_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FloydListener ) ((FloydListener)listener).exitMethod_decl(this);
		}
	}

	public final Method_declContext method_decl() throws RecognitionException {
		Method_declContext _localctx = new Method_declContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_method_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(IDENTIFIER);
			setState(106);
			match(LPAREN);
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENTIFIER) {
				{
				setState(107);
				argument_decl_list();
				}
			}

			setState(110);
			match(RPAREN);
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(111);
				match(COLON);
				setState(112);
				type(0);
				}
			}

			setState(115);
			match(IS);
			setState(117); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(116);
				match(ENDOFLINE_1);
				}
				}
				setState(119); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ENDOFLINE_1 );
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENTIFIER) {
				{
				{
				setState(121);
				var_decl();
				}
				}
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(127);
			match(BEGIN);
			setState(129); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(128);
				match(ENDOFLINE_1);
				}
				}
				setState(131); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ENDOFLINE_1 );
			setState(133);
			statement_list();
			setState(134);
			match(END);
			setState(135);
			match(IDENTIFIER);
			setState(137); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(136);
				match(ENDOFLINE_1);
				}
				}
				setState(139); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ENDOFLINE_1 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Argument_decl_listContext extends ParserRuleContext {
		public List<Argument_declContext> argument_decl() {
			return getRuleContexts(Argument_declContext.class);
		}
		public Argument_declContext argument_decl(int i) {
			return getRuleContext(Argument_declContext.class,i);
		}
		public List<TerminalNode> SEMICOL() { return getTokens(FloydParser.SEMICOL); }
		public TerminalNode SEMICOL(int i) {
			return getToken(FloydParser.SEMICOL, i);
		}
		public Argument_decl_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argument_decl_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FloydListener ) ((FloydListener)listener).enterArgument_decl_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FloydListener ) ((FloydListener)listener).exitArgument_decl_list(this);
		}
	}

	public final Argument_decl_listContext argument_decl_list() throws RecognitionException {
		Argument_decl_listContext _localctx = new Argument_decl_listContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_argument_decl_list);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,17,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(141);
					argument_decl();
					setState(142);
					match(SEMICOL);
					}
					} 
				}
				setState(148);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,17,_ctx);
			}
			setState(149);
			argument_decl();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Argument_declContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(FloydParser.IDENTIFIER, 0); }
		public TerminalNode COLON() { return getToken(FloydParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Argument_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argument_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FloydListener ) ((FloydListener)listener).enterArgument_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FloydListener ) ((FloydListener)listener).exitArgument_decl(this);
		}
	}

	public final Argument_declContext argument_decl() throws RecognitionException {
		Argument_declContext _localctx = new Argument_declContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_argument_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			match(IDENTIFIER);
			setState(152);
			match(COLON);
			setState(153);
			type(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(FloydParser.INT, 0); }
		public TerminalNode STRING() { return getToken(FloydParser.STRING, 0); }
		public TerminalNode BOOLEAN() { return getToken(FloydParser.BOOLEAN, 0); }
		public TerminalNode IDENTIFIER() { return getToken(FloydParser.IDENTIFIER, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode LBRACK() { return getToken(FloydParser.LBRACK, 0); }
		public TerminalNode RBRACK() { return getToken(FloydParser.RBRACK, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FloydListener ) ((FloydListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FloydListener ) ((FloydListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		return type(0);
	}

	private TypeContext type(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		TypeContext _localctx = new TypeContext(_ctx, _parentState);
		TypeContext _prevctx = _localctx;
		int _startState = 14;
		enterRecursionRule(_localctx, 14, RULE_type, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
				{
				setState(156);
				match(INT);
				}
				break;
			case STRING:
				{
				setState(157);
				match(STRING);
				}
				break;
			case BOOLEAN:
				{
				setState(158);
				match(BOOLEAN);
				}
				break;
			case IDENTIFIER:
				{
				setState(159);
				match(IDENTIFIER);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(170);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,20,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new TypeContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_type);
					setState(162);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(163);
					match(LBRACK);
					setState(165);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FALSE) | (1L << ME) | (1L << NEW) | (1L << NOT) | (1L << NULL) | (1L << TRUE) | (1L << IDENTIFIER) | (1L << INTEGER_LITERAL) | (1L << STRING_LITERAL) | (1L << ADD) | (1L << MINUS) | (1L << LPAREN))) != 0)) {
						{
						setState(164);
						expression(0);
						}
					}

					setState(167);
					match(RBRACK);
					}
					} 
				}
				setState(172);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,20,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Statement_listContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> ENDOFLINE_1() { return getTokens(FloydParser.ENDOFLINE_1); }
		public TerminalNode ENDOFLINE_1(int i) {
			return getToken(FloydParser.ENDOFLINE_1, i);
		}
		public Statement_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FloydListener ) ((FloydListener)listener).enterStatement_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FloydListener ) ((FloydListener)listener).exitStatement_list(this);
		}
	}
